fixed bugs in the IPECommands and allows for the process output to be redirected